--- a/app/views/todo_items/index.html.erb
+++ b/app/views/todo_items/index.html.erb
@@ -27,7 +27,7 @@
     <% end %>
   </tbody>
 </table>
-
 <br>
+<p id="todoCount">Number of Completed Todos: <%= @number_of_completed_todos %></p>
 
 <%= link_to 'New Todo item', new_todo_item_path %>
